2013-12-27  Lars Ingebrigtsen  <larsi@gnus.org>

	* net/shr.el (shr-insert): Don't infloop if the width is zero.

2013-12-27  Stefan Monnier  <monnier@iro.umontreal.ca>

	* icomplete.el (icomplete-show-matches-on-no-input): Default to nil
	(bug#16251).

	* electric.el: Move all electric-pair-* to elec-pair.el.
	* elec-pair.el: New file, split from electric.el.

2013-12-27  Lars Ingebrigtsen  <larsi@gnus.org>

	* net/shr.el (shr-find-fill-point): Don't try to fill if the
	indentation level is larger than the width, because that will
	infloop.
	(shr-insert): Fill repeatedly long texts, so that Japanese is
	formatted correctly (bug#16263).
	(shr-find-fill-point): Off by one error in comparison with the
	indentation.

2013-12-26  João Távora  <joaotavora@gmail.com>

	* electric.el (electric-pair-mode): More flexible engine for skip-
	and inhibit predicates, new options for pairing-related functionality.
	(electric-pair-preserve-balance): Pair/skip parentheses and quotes
	if that keeps or improves their balance in buffers.
	(electric-pair-delete-adjacent-pairs): Delete the pair when
	backspacing over adjacent matched delimiters.
	(electric-pair-open-extra-newline): Open extra newline when
	inserting newlines between adjacent matched delimiters.
	(electric--sort-post-self-insertion-hook):
	Sort post-self-insert-hook according to priority values when
	minor-modes are activated.
	* simple.el (newline-and-indent): Call newline with interactive
	set to t.
	(blink-paren-post-self-insert-function): Set priority to 100.
	* emacs-lisp/lisp-mode.el (lisp-mode-variables):
	Use electric-pair-text-pairs to pair backtick-and-quote in strings and
	comments.  Locally set electric-pair-skip-whitespace to 'chomp and
	electric-pair-open-newline-between-pairs to nil.

2013-12-26  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	* progmodes/python.el: Use lexical-binding.
	(python-nav-beginning-of-defun): Stop searching ASAP.

2013-12-25  Xue Fuqiao  <xfq.free@gmail.com>
