@@ -1,3 +1,7 @@
+2013-12-27  Glenn Morris  <rgm@gnu.org>
+
+	* emacs-lisp/lisp-mode.el (lisp-mode-variables): Unbreak bootstrap.
+
 2013-12-27  Lars Ingebrigtsen  <larsi@gnus.org>
 
 	* net/shr.el (shr-insert): Don't infloop if the width is zero.
